[Fix] fixed issue where button text is wrapping when zoomed out in the browser

--- a/src/components/AddToCart/AddToCart.scss
+++ b/src/components/AddToCart/AddToCart.scss
@@ -20,8 +20,6 @@
     display: flex;
     align-items: center;
     gap: var(--spacing-100);
-    max-width: 160px;
-    width: 100%;
     height: 44px;
     transition: var(--hover-transition);
 
